# phyloloc

./: CONTRIBUTORS  GUIBasicFuncionalTesting.md  InstallationUbuntu.md  InstallingInMacOSX.md  ProjectHome.md  README.md  youtrack.md
branches/bitset/planning/: PhylolocProject2010.mpp
branches/bitset/prototypes/algorithm prototype/: autotools-build.sh  configure.ac
branches/bitset/test/: TestMain.cpp
branches/branch1/planning/: PhylolocProject2007.mpp
branches/branch1/src/: Makefile  phyloloc.pro
code_metrics/: metrics_complete.sh
datasets/dataset1/: tree1.nwk
datasets/dataset3/: tree1.nwk
datasets/dataset5/: distances1.dist  tree1.nwk
datasets/dataset6/: tree1.nwk
datasets/dataset7/: tree1.nwk
planning/: CronogramaPhyloloc.xls  PlanPhyloloc.doc
planning/Minutas/: 01 Minuta 22042011.doc
prototypes/GUI prototype/Application/: Application.csproj  NodeDetail.Designer.cs  NodeDetail.cs
prototypes/algorithm prototype/: CONTRIBUTORS  phylopp.cpp  phylopp.h  tree-places.cpp
src/: Makefile  makefile  phyloloc.pro
src/Domain/: IIterator.h  INode.h  ITree.h  ITreeCollection.h  ListIterator.h  LocationAspect.h  LocationManager.h
src/Main/: Console.cpp
src/PhyloGUI/: GuiAspect.h  SConscript  edge.cpp  edge.h  graphwidget.cpp  graphwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  phyloloc.pro  ui_mainwindow.h
src/PhyloGUI/forms/: mainwindow.ui
src/PhyloGUI/inc/: aboutdialog.h  edge.h  filedialog.h  graphwidget.h  mainwindow.h  node.h  nodedetaildialog.h  propagatedialog.h  ui_mainwindow.h
src/PhyloGUI/src/: aboutdialog.cpp  edge.cpp  filedialog.cpp  graphwidget.cpp  main.cpp  mainwindow.cpp  node.cpp  nodedetaildialog.cpp  propagatedialog.cpp
src/Phyloloc/: SConscript
src/Phyloloc/Facade/: Facade.h
src/Phyloloc/Propagator/: DeviationPropagatorObserver.h  DeviationWriter.h  DeviationsExporter.h  ExportDeviation.h  Propagator.h  PropagatorAction.h  PropagatorAspect.h  StatisticCollector.h  StatisticCollectorObserver.h  StatisticInfo.h  StatisticLoadAction.h  StatisticStrictConsensor.h  StatisticsAspect.h  TraversalPredicates.h  VectorHelper.h
src/Phyloloc/tests/: PropagatorAspectTest.cpp  PropagatorTest.cpp  SConscript  StatisticCollectorTest.cpp  StatisticConsensorObserverTest.cpp  VectorHelperTest.cpp
src/Phylopp/Consensor/: ClusterTree.h  ConsensorAspect.h  IConsensorObserver.h  IConsensorStrategy.h  MacroConsensorObserver.h  StrictConsensor.h  bitset.cpp  bitset.h
src/tree-gen/: Makefile  SConscript  test1.cc  tree_gen.cpp
test/: CMakeLists.txt  TestMain.cpp
test/Consensor/: ClusterTreeTest.cpp  DummyObserver.h  StrictConsensorTest.cpp  bitsetTest.cpp
test/DataSource/: FileDataSourceTest.cpp
test/Domain/: INodeTest.cpp  ITreeCollectionTest.cpp  ITreeTest.cpp  ListIteratorTest.cpp  LocationAspectTest.cpp  MockNode.h
test/Propagator/: PropagatorAspectTest.cpp  PropagatorTest.cpp  StatisticCollectorTest.cpp  StatisticConsensorObserverTest.cpp
test/TestTrees/: distances1.dist  distances3.dist  fullTree.nwk  tree1.nwk
test/Traverser/: TraverserTest.cpp
trunk/: known_issues.txt
trunk/code_coverage/: coverage_tests.sh  coverage_usage.sh
trunk/code_metrics/: metrics_no_gui.sh  metrics_tests.sh
trunk/prototypes/algorithm prototype/: Makefile.am  phylopp.cpp  tree-places.cpp
trunk/src/: Makefile  Makefile.bak  phyloloc.pro  resources.qrc
trunk/test/: CMakeLists.txt
trunk/test/Consensor/: ClusterTreeTest.cpp  bitsetTest.cpp
trunk/test/Propagator/: PropagatorTest.cpp  VectorHelperTest.cpp
trunk/test/TestTrees/: distances1.dist  malformeddistances.dist  malformeddistances2.dist  tree12.nwk  tree13.nwk  tree2.nwk
wiki/: InstallationUbuntu.wiki  InstallingInMacOSX.wiki
(+136 files in other folders)
